syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message InputNumbers {
    int32 number_1 = 1;
    int32 number_2 = 2;
}

message CalculatorRequest {
    InputNumbers inputNumbers = 1;
}

message CalculatorResponse {
    int32 result = 1;
}

service CalculatorService{
    //Unary
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse){};
}